# tidier-trees

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  tidier_trees
src/: main.c  trees.c  trees.h  utils.c  utils.h
test/: main.c
